<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1BC331"
    tools:context=".Formulario">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="104dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:text="@string/textDia"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <EditText
        android:id="@+id/etExercicio"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textHintExercicio"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="123dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:text="@string/textRepeticao"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:text="@string/textSerie"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:text="@string/textExercicio"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Spinner
        android:id="@+id/spDia"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginEnd="52dp"
        android:entries="@array/arraySemana"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/textBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etRepeticao"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/textHintRepeticao"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <EditText
        android:id="@+id/etSerie"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/textHintSerie"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

</androidx.constraintlayout.widget.ConstraintLayout>